Pagination Complete on Todo List Page, Double ScrollBar Issue Solve

--- a/src/components/Header/HeaderNavbar.css
+++ b/src/components/Header/HeaderNavbar.css
@@ -8,10 +8,7 @@
   margin: 0px 10px;
   /* border: 1px solid black; */
 }
-html,
-body {
-  overflow-x: hidden;
-}
+
 .profile {
   width: 50px;
   height: 50px;
